scss/pc/property/property.scss
#pc-wrap {
	#property-list-page {
		padding-bottom: 40px;
		background: #f6f6f6;
		.container {
			.right {
				position: absolute;
				right: 0;
				top: 3%;
				display: flex;
				flex-direction: row;
				align-items: center;
				z-index: 2;
				button {
					margin-left: 10px;
					color: #181a20;
					font-family: $font;
					font-size: 14px;
					font-style: normal;
					font-weight: bold;
					line-height: 26px;
					&:hover {
						background: none;
					}
				}
			}
			.property-page {
				position: relative;
				width: 100%;
				flex-direction: row;
				gap: 25px;
				padding-top: 96px;
				.filter-config {
					width: 339px;
					height: auto;
					.filter-main {
						width: 100%;
						padding: 30px 24px;
						border-radius: 12px;
						background: #fff;
						box-shadow: 0 1px 4px 0 rgba(24, 26, 32, 0.07);
						.find-your-home {
							position: relative;
							width: 100%;
							gap: 10px;
							.property-location {
								gap: 10px;
								height: 115px;
								overflow: hidden;
								transition: 1s;
								&:hover {
									height: 253px;
								}
							}
							.title-main {
								width: 100%;
								height: 25px;
								color: #181a20;
								font-family: $font;
								font-size: 15px;
								font-style: normal;
								font-weight: 600;
								line-height: normal;
							}
							.title {
								width: auto;
								height: auto;
								color: #181a20;
								font-family: $font;
								font-size: 14px;
								font-style: normal;
								font-weight: 600;
								line-height: normal;
							}
							.input-box {
								position: relative;
								width: 100%;
								flex-direction: row;
								align-items: center;
								svg {
									cursor: pointer;
								}
								.search-input {
									width: 100%;
									height: 53px;
									border-radius: 8px;
									border: 1px solid #ddd;
									background: #fff;
									outline: none;
									padding-left: 43px;
									color: #717171;
									font-family: $font;
									font-size: 14px;
									font-style: normal;
									font-weight: 400;
									line-height: 26px;
								}
								img {
									position: absolute;
									width: 18px;
									height: 17px;
									top: 18px;
									left: 15px;
								}
								.property-checkbox {
									width: 16px;
									height: 15px;
									border-radius: 12px;
									margin-right: 10px;
									svg {
										width: 19px;
									}
								}
							}
							.city-select {
								width: 100%;
								height: 49px;
								border-radius: 8px;
								border: 1px solid #ddd;
								background: #fff;
								outline: none;
								padding-left: 15px;
								appearance: none;
								cursor: pointer;
								box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
								color: #717171;
								font-family: $font;
								font-size: 14px;
								font-style: normal;
								font-weight: 400;
								line-height: 26px;
							}
							.divider {
								position: absolute;
								height: 48px;
								border-left: 1px solid #ddd;
								right: 39px;
								top: 31px;
							}
							.arrow-down {
								position: absolute;
								width: 15px;
								height: 8px;
								color: #ddd;
								right: 13px;
								top: 52px;
							}
							.property-type {
								color: #181a20;
								font-family: $font;
								font-size: 14px;
								font-style: normal;
								font-weight: 400;
								line-height: 19px;
							}
							.button-group {
								width: 100%;
								height: 43.998px;
								flex-direction: row;
								button {
									width: 100%;
									color: #181a20;
									text-align: center;
									font-family: $font;
									font-size: 13px;
									font-style: normal;
									font-weight: 600;
									line-height: normal;
								}
							}
							.square-year-input {
								width: 100%;
								gap: 10px;
								flex-direction: row;
								align-items: center;
								.central-divider {
									width: 22px;
									border: 1px solid black;
								}
								input {
									width: 100%;
									height: 49px;
									border-radius: 8px;
									border: 1px solid #ddd;
									background: #fff;
									outline: none;
									padding-left: 15px;
								}
								label {
									line-height: 13px;
								}
								input::placeholder {
									color: #717171;
									font-family: $font;
									font-size: 14px;
									font-style: normal;
									font-weight: 400;
									line-height: 26px;
								}
							}
						}
					}
				}
				.main-config {
					width: 936px;
					align-items: center;
					gap: 109px;
					.list-config {
						display: flex;
						width: 100%;
						height: auto;
						flex-direction: row;
						flex-wrap: wrap;
						gap: 23px;
						.card-config {
							width: 296px;
							height: 413px;
							margin-bottom: 7px;
							border-radius: 12px;
							background: #fff;
							box-shadow: 0px 1px 4px 0px rgba(24, 26, 32, 0.07);
							.top {
								position: relative;
								width: 100%;
								height: 240px;
								a {
									height: 100%;
								}
								img {
									width: 100%;
									height: 100%;
									object-fit: cover;
									border-radius: 12px 12px 0 0;
								}
								.top-badge {
									position: absolute;
									top: 20px;
									left: 16px;
									display: flex;
									width: 80px;
									height: 30px;
									justify-content: center;
									align-items: center;
									border-radius: 6px;
									padding: 6px 20px;
									background: #eb6753;
									color: #fff;
									text-align: center;
									text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
									font-family: $font;
									font-size: 12px;
									font-style: normal;
									font-weight: 600;
									line-height: normal;
									img {
										height: 16px;
									}
								}
								.price-box {
									position: absolute;
									bottom: 20px;
									left: 20px;
									padding: 8px 15px;
									align-items: center;
									border-radius: 6px;
									border: 1px solid rgba(255, 255, 255, 0.5);
									background: #fff;
									p {
										color: #181a20;
										font-family: $font;
										font-size: 15px;
										font-style: normal;
										font-weight: 600;
										line-height: normal;
									}
								}
							}
							.bottom {
								width: 100%;
								height: 173px;
								padding: 20px 16px 10px 16px;
								.name-address {
									width: 100%;
									height: 48px;
									gap: 5px;
									margin-bottom: 20px;
									.name {
										width: 100%;
										height: 23px;
										overflow: hidden;
										p {
											color: #181a20;
											font-family: $font;
											font-size: 15px;
											font-style: normal;
											font-weight: 600;
											line-height: normal;
											text-transform: capitalize;
										}
									}
									.address {
										width: 100%;
										overflow: hidden;
										p {
											color: #717171;
											font-family: $font;
											font-size: 13px;
											font-style: normal;
											font-weight: 400;
											line-height: normal;
										}
									}
								}
								.options {
									flex-direction: row;
									width: 100%;
									height: 20px;
									gap: 20px;
									margin-bottom: 10px;
									.option {
										flex-direction: row;
										gap: 5px;
										align-items: center;
										p {
											color: #181a20;
											font-family: $font;
											font-size: 13px;
											font-style: normal;
											font-weight: 400;
											line-height: normal;
										}
									}
								}
								.divider {
									width: 100%;
									height: 1px;
									background: #ddd;
									margin-bottom: 17px;
								}
								.type-buttons {
									flex-direction: row;
									width: 100%;
									justify-content: space-between;
									align-items: center;
									.type {
										flex-direction: row;
										align-items: center;
										gap: 7px;
										p {
											color: #181a20;
											font-family: $font;
											font-style: normal;
											line-height: normal;
										}
										.disabled-type {
											color: rgba(143, 143, 143, 0.54);
											font-family: $font;
											font-style: normal;
											line-height: normal;
										}
									}
									.buttons {
										flex-direction: row;
										width: auto;
										justify-content: center;
										align-items: center;
										svg {
											width: 24px;
											height: 24px;
											cursor: pointer;
										}
										.view-cnt {
											font-size: 13px;
										}
									}
								}
							}
						}
					}
					.pagination-config {
						width: 442px;
						height: 86px;
						align-items: center;
						gap: 20px;
						.pagination-box {
							width: 100%;
							align-items: center;
						}
						.total-result {
							p {
								color: #181a20;
								text-align: center;
								font-family: $font;
								font-size: 24px;
								font-style: normal;
								font-weight: 275;
								line-height: 26px;
							}
						}
					}
				}
			}
		}
	}
}

